New in v0.7.00 (2009/09/??)
---------------------------
422477  [PATCH] IMAP Backend Error in delete()

426282  [PATCH] create par2 support

Merged in lp:~mterry/duplicity/iterate-warnings
Add machine codes to various warnings when iterating over source files


New in v0.6.05 (2009/08/28)
---------------------------
Merged in lp:~l2g/duplicity/test-compat from Larry Gilbert which made
the testing compatible across more systems.  Also fixed the remaining
collectionstest bug which was trying to test with no cache present.

Bugs fixed this release:
407968  GIO backend can't restore
408059  Failure due to _logger.log failure for content with special
        characters: TypeError decoding Unicode not supported
409593  deja-dup (or duplicity) deletes all signatures
412667  "duplicity remove-older-than" asks for passphrase even though
        not required
418170  [PATCH] file names longer then 512 symbols are not supported


New in v0.6.04 (2009/08/01)
---------------------------
One major and one minor change.  The "No such file or directory" error
is bad enough that this should be released quickly.  For those of you
using encryption, this is not a problem, but for those of you that do
not use encryption (--no-encryption), then this will manifest itself if
the local cache gets out of sync with the remote store.

Bugs fixed this release:
405734  duplicity fails to restore files that contain a newline character
403790  Backup error: No such file or directory


New in v0.6.03 (2009/07/29)
---------------------------
Lots of small changes and some bug fixes.
* Restart error handling has been smoothed out a great deal and it
  "does what is right" in order to keep going.
* Backends are now optional, if they fail an Info message is put out
  to notify of the failure and why.
* There was more work on translations and internationalization.
Thanks to everyone!

Bugs fixed this release:
377528  --file-to-restore doesn't work with trailing slash