@@ -34,7 +34,7 @@ config.setup()
 class DDTest(unittest.TestCase):
     """Test functions in diffdir.py"""
     def setUp(self):
-        assert not os.system("tar xzf testfiles.tar.gz >& /dev/null")
+        assert not os.system("tar xzf testfiles.tar.gz > /dev/null 2>&1")
 
     def tearDown(self):
         assert not os.system("rm -rf testfiles tempdir temp2.tar")
